Fixed warnings and white space.

--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,16 @@
 {
 	display:flex;
 	flex-direction:row;
-    	justify-content:flex-start;
+  justify-content:flex-start;
 }
 
 .column
 {
-	display: flex;
+  display: flex;
 	flex-direction:column;
-    	justify-content:flex-start;
-    padding:0px;
-    margin:0px;
+  justify-content:flex-start;
+  padding:0;
+  margin:0;
 }
 
 .centerRow
@@ -102,8 +102,8 @@ ul {
     li a
     {
         display:flex;
-	flex-direction:row;
-	justify-content:center;
+	      flex-direction:row;
+	      justify-content:center;
         background-color:blue;
         color:white;
         width:100px;
@@ -127,7 +127,7 @@ button { background-color:green; color:white;
   -ms-user-select: none;     /* Internet Explorer/Edge */
   user-select: none;         /* Standard syntax */
 
-margin-bottom:0px;}
+margin-bottom:0;}
 
 .labelText { padding-left:5px;}
 
